--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,33 @@
+body {
+  font-family: "Raleway", sans-serif;
+}
+
+.weather-app {
+  border: 1px solid black;
+  border-radius: 5px;
+  margin: 30px auto;
+  max-width: 600px;
+  padding: 20px;
+}
+
 h1 {
-  color: blueviolet;
+  color: rgb(114, 114, 114);
+  font-size: 55px;
+  font-weight: 600;
+  line-break: 28px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  color: rgb(114, 114, 114);
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 25px;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
