--- a/src/style.css
+++ b/src/style.css
@@ -61,3 +61,12 @@ li:first-letter {
   position: relative;
   top: -34px;
 }
+
+.weather-temperature .active {
+  color: black;
+  cursor: default;
+}
+
+.weather-temperature .active:hover {
+  text-decoration: none;
+}
