--- a/src/style.css
+++ b/src/style.css
@@ -17,7 +17,7 @@ ul {
 
 li {
   color: rgb(114, 114, 114);
-  font-size: 18px;
+  font-size: 20px;
   font-weight: 400;
   line-height: 25px;
   list-style: none;
@@ -29,6 +29,16 @@ li:first-letter {
   text-transform: capitalize;
 }
 
+.time {
+  text-align: right;
+}
+
+.row {
+  padding: 5px;
+  margin-bottom: 10px;
+  font-size: 17px;
+}
+
 .weather-app {
   border: 1px solid black;
   border-radius: 5px;
@@ -36,8 +46,8 @@ li:first-letter {
 }
 
 .weather-app-wrapper {
-  margin: 30px auto;
-  max-width: 600px;
+  margin: 20px auto;
+  max-width: 700px;
 }
 
 .overview {
