--- a/src/style.css
+++ b/src/style.css
@@ -80,3 +80,23 @@ li:first-letter {
 .weather-temperature .active:hover {
   text-decoration: none;
 }
+
+.weather-forecast {
+  margin-top: 12px;
+  text-align: center;
+  color: rgb(114, 114, 114);
+}
+
+.forecast-date {
+  font-size: 20px;
+  color: rgb(114, 114, 114);
+}
+
+.forecast-temp {
+  color: rgb(114, 114, 114);
+  font-size: 17px;
+}
+
+.forecast-temp-min {
+  opacity: 0.7;
+}
