--- a/src/style.css
+++ b/src/style.css
@@ -114,9 +114,10 @@ li:first-letter {
 }
 
 .btn {
-  background-color: rgb(178, 210, 247);
+  background-color: rgb(160, 201, 247);
   border-color: rgb(178, 210, 247);
   color: white;
+  font-family: "Raleway", sans-serif;
 }
 
 .btn:hover {
@@ -127,6 +128,7 @@ li:first-letter {
 
 .fa {
   color: rgb(221, 115, 66);
+
   font-size: 22px;
   padding: 5px;
   margin-left: 10px;
@@ -135,4 +137,8 @@ li:first-letter {
 .fa:hover {
   color: rgb(243, 152, 109);
   cursor: pointer;
+}
+
+.footer {
+  font-size: 13px;
 }
